[tool.poetry]
name = "nft-gen"
version = "0.1.0"
description = ""
authors = ["Thamara Liyanage <thamara.prabuddha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
celery = "^5.3.6"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
